tests/NormalTests/paczka2/big_fuzzy/89960701.err
Error in line 16: 9suCGs5D A689 48,1
Error in line 10: W9IY A689 60,5
Error in line 21: S293 A689 8,3
Error in line 23: S293 A451 6,0
Error in line 24: S293 S516 22,3
Error in line 29: S293 S293 53,2
Error in line 45: Tgzf S293 76,5
Error in line 47: Tgzf A689 93,3
Error in line 50: S293 A689 36,1
Error in line 57: S293 S293 79,1
Error in line 52: 9suCGs5D A451 17,6
Error in line 75: S293 A689 27,1
Error in line 73: W9IY A689 74,5
Error in line 76: S293 S516 54,2
Error in line 87: xEB8CH S293 22,1
Error in line 89: xEB8CH A451 24,2
Error in line 103: C1hzir2wHAS S516 86,0
Error in line 106: xEB8CH S516 73,55
Error in line 107: xEB8CH S293 8,8
Error in line 113: xEB8CH A4Z1 402,6
Error in line 111: W9IY A689 4,1
Error in line 112: Tgzf S516 85,8
Error in line 101: O8q A689 77,2
Error in line 120: 9suCGs5D A689 71,7
Error in line 140: WIY S516 57,5
Error in line 127: C1hzir2wHAS S293 88,4
Error in line 139: 9suCGs5D A451 11,7
Error in line 85: S293 S293 273,6
Error in line 142: W9IY S516 17,8
Error in line 159: C1hzir2wHAS S293 1,2
Error in line 172: Tgzf A689 2,4
Error in line 178: S293 A689 85,8
Error in line 174: xEB8CH A689 127,9
Error in line 179: S293 S293 50,4
Error in line 184: xEB8CH A451 42,8
Error in line 183: O8q S293 62,0
Error in line 219: O8q A451 1x,0
Error in line 207: Tgzf A689 58,7
Error in line 226: xEB8CH S516 222,2
Error in line 228: S293 A451 02,0
Error in line 212: W9IY S293 31,3
Error in line 241: S293 S293 90,5
Error in line 246: S293 A689 20,9
Error in line 245: W9IY S516 33,1
